# 2022/02/27
- lots of pull changes

# 2022/02/16
- Refactor some spell cast validation for spells, aa, items, discs

# 2022/02/13
- Pull path length checking
- Tweak ranger positioning checking for nearby mobs

# 2022/02/12
- Group watch settings

# 2022/02/10
- Bunch of fixes around pulling and other things
- Pull ignore lists
- Named list for burn all named

# 2022/02/07
- Start on an SK implementation.

# 2022/02/06
- UI refactor

# 2022/02/01
- Split mezzing logic out from bard class impl.

# 2022/01/31
- Add more war DPS abilities and split up DPS and tanking abilities.

# Pre-changelog existing
- A months worth of dev around supporting manual, assist, chase, pullertank, tank modes for nec, brd, rng, war classes.
- Refer to commit history prior to 2022-01-31.